@@ -139,6 +139,12 @@ Adjusted placement of the Checkout and Publish buttons in search results and
 elsewhere so that they're not so close to the border of the box that contains
 them (Bug #194). [Phillip Smith]
 
+=item *
+
+The Apache 2 detection during installation now properly finds C<Include>d
+configuration files specified with paths relative to the C<HTTPD_ROOT> (Bug
+#174). [Michael Herring]
+
 =back
 
 =head1 Version 2.0.0 (2010-04-12)
